--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ blinker==1.7.0; python_version >= '3.8'
 click==8.1.7; python_version >= '3.7'
 dataprocessor==0.0.11
 datetime==5.5; python_version >= '3.7'
-faker==24.3.0; python_version >= '3.8'
+faker==24.4.0; python_version >= '3.8'
 flask==3.0.2; python_version >= '3.8'
 flask-sqlalchemy==3.1.1; python_version >= '3.8'
 itsdangerous==2.1.2; python_version >= '3.7'
@@ -16,9 +16,10 @@ python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in 
 pytz==2024.1
 setuptools==69.2.0; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==2.0.28; python_version >= '3.7'
+sqlalchemy==2.0.29; python_version >= '3.7'
+tabulate==0.9.0; python_version >= '3.7'
 typing==3.7.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 typing-extensions==4.10.0; python_version >= '3.8'
 tzdata==2024.1; python_version >= '2'
-werkzeug==3.0.1; python_version >= '3.8'
+werkzeug==3.0.2; python_version >= '3.8'
 zope.interface==6.2; python_version >= '3.7'
